# parari

./: CONTRIBUTING.md  Cargo.toml  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
src/: cli.rs  domain.rs  error.rs  executor.rs  git.rs  lib.rs  main.rs
src/cli/: args.rs  editor.rs  progress.rs  split_view.rs  ui.rs
src/cli/snapshots/: parari__cli__split_view__tests__snapshot_tests__render_split_view_confirm_mode.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_diff_mode.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_empty_results.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_failed_model_selected.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_focused_on_details.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_log_mode.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_search_mode.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_second_model_selected.snap
src/cli/split_view/: app.rs  content.rs  render.rs  tests.rs  types.rs
src/cli/split_view/snapshots/: parari__cli__split_view__tests__snapshot_tests__render_split_view_confirm_mode.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_diff_mode.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_empty_results.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_failed_model_selected.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_focused_on_details.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_log_mode.snap  parari__cli__split_view__tests__snapshot_tests__render_split_view_search_mode.snap  (+1 more)
src/config/: paths.rs
src/domain/: result.rs  task.rs  worktree.rs
src/executor/: claude.rs  codex.rs  gemini.rs  mock.rs  traits.rs
src/git/: merge.rs  worktree.rs
tests/: integration_test.rs
