[package]
edition = "2024"
name = "parari"
version = "0.1.0"

[features]
default = []
mock = []    # Enable mock executors for development/testing

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.31"
inquire = "0.9.1"
tempfile = "3.23.0"
thiserror = "2"
tokio = { version = "1.48.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "process",
  "fs",
  "sync",
  "signal",
] }
