[package]
description = "A parallel AI agents runner"
edition = "2024"
license = "Apache-2.0"
name = "parari"
version = "0.0.3"

[features]
default = []
mock = []    # Enable mock executors for development/testing

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.31"
inquire = "0.9.1"
tempfile = "3.23.0"
thiserror = "2"
indicatif = "0.17.11"
console = "0.15.10"
tokio = { version = "1.48.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "process",
  "fs",
  "sync",
  "signal",
] }
