[package]
description = "A parallel AI agents runner"
edition = "2024"
license = "Apache-2.0"
name = "parari"
version = "0.0.4"

[features]
default = []
mock = []    # Enable mock executors for development/testing

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.0"
crossterm = "0.29.0"
dirs = "6.0.0"
futures = "0.3.31"
indicatif = "0.18.0"
inquire = "0.9.1"
ratatui = "0.29.0"
tempfile = "3.23.0"
thiserror = "2"
tokio = { version = "1.48.0", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "process",
  "fs",
  "sync",
  "signal",
  "io-util",
] }

[dev-dependencies]
insta = "1.44.3"
